[gd_scene load_steps=16 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_1w47b"]
[ext_resource type="PackedScene" uid="uid://dyu1p85lcff34" path="res://Scenes/Player/PauseMenu.tscn" id="2_ayof8"]
[ext_resource type="Script" path="res://Scenes/Components/HitboxComponent.gd" id="3_4c68y"]
[ext_resource type="Texture2D" uid="uid://b0wwtt2fq7l1n" path="res://Resources/Textures/crosshair.png" id="3_cxjrq"]
[ext_resource type="Script" path="res://Scenes/Player/EquipmentManager.gd" id="3_detgp"]
[ext_resource type="Script" path="res://Scenes/Components/HealthComponent.gd" id="4_5eg73"]
[ext_resource type="Script" path="res://Scenes/Abilities/Fire.gd" id="4_gbn3t"]
[ext_resource type="Texture2D" uid="uid://c8bik4dfa6lna" path="res://Resources/Textures/Hitmarker (Custom).png" id="4_j21br"]
[ext_resource type="AudioStream" uid="uid://df7tmyislr06a" path="res://Resources/Sounds/1202_footsteps-02.wav" id="6_qa6u4"]
[ext_resource type="AudioStream" uid="uid://btr1pxkhkoyt5" path="res://Resources/Sounds/1418_gunshot-01.wav" id="8_2avjl"]
[ext_resource type="Script" path="res://Scenes/Abilities/Interact.gd" id="12_smae0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f8o23"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dbs3j"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Head/Camera3d:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("HealthComponent:health")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("Respawn_Anchor:position")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("gunshot_emitter", "health")]
collision_layer = 8
collision_mask = 3
platform_on_leave = 2
platform_floor_layers = 4294901761
platform_wall_layers = 2
script = ExtResource("1_1w47b")
gunshot_emitter = NodePath("GunAudioEmitter")
health = NodePath("HealthComponent")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468479, -0.463024)

[node name="bodyRay" type="RayCast3D" parent="Head/Camera3d"]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 0, -0.00588068, 0.463024)
target_position = Vector3(60, 0, 0)
collision_mask = 3

[node name="hitboxRay" type="RayCast3D" parent="Head/Camera3d"]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 0, -0.00588068, 0.463024)
target_position = Vector3(60, 0, 0)
collision_mask = 7
collide_with_areas = true

[node name="PauseMenu" parent="Head/Camera3d" node_paths=PackedStringArray("equipment_manager") instance=ExtResource("2_ayof8")]
visible = false
equipment_manager = NodePath("../../../EquipmentManager")

[node name="CrosshairControl" type="Control" parent="Head/Camera3d"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="Head/Camera3d/CrosshairControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cxjrq")
stretch_mode = 2

[node name="Hitmarker" type="TextureRect" parent="Head/Camera3d/CrosshairControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_j21br")

[node name="Respawn_Anchor" type="Node3D" parent="."]
top_level = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_5eg73")

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_4c68y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_f8o23")

[node name="MovementAudioEmitter" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_qa6u4")
attenuation_model = 1
autoplay = true
max_polyphony = 2

[node name="GunAudioEmitter" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_2avjl")
volume_db = -12.308

[node name="EquipmentManager" type="Node" parent="."]
script = ExtResource("3_detgp")

[node name="Pistol" type="Node" parent="." groups=["Abilities"]]
script = ExtResource("4_gbn3t")

[node name="Interact" type="Node" parent="." groups=["Abilities"]]
script = ExtResource("12_smae0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_dbs3j")
